--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% if current_user %>
+      Hi <% current_user.FirstName%>
+    <%end%>
     <%= yield %>
   </body>
 </html>
