--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,14 @@
   </head>
 
   <body>
-    <% if current_user %>
-      Hi <% current_user.FirstName%>
-    <%end%>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+
+    <% else %>
+      <a href="/users/sign_in">Sign in</a>
+    <% end %>
     <%= yield %>
   </body>
 </html>
