--- a/app/views/ks_hubs/index.html.erb
+++ b/app/views/ks_hubs/index.html.erb
@@ -2,6 +2,12 @@
 
 <h1>Ks Hubs</h1>
 
+<% if @user %>
+  Logged in as: <%= @user.FirstName %>
+
+  <%= button_to "Logout", logout_path, method: :delete %>
+<% end %>
+
 <table>
   <thead>
     <tr>
