--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,43 +1,63 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<head>
+  <style>
+    table {
+      width: 100%;
+    }
+
+    th {
+      border: 1px solid #ddd;
+      padding: 8px;
+      background-color: #8B0000;
+      color: white;
+    }
+
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      background-color: #DCDCDC;
+    }
+
+    h1 {
+      color: white;
+      font-size: 45px;
+    }
+
+    body {
+      background-color: #D2B48C;
+    }
+  </style>
+</head>
+
+<h1>MEMBERS</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Uin</th>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Phonenumber</th>
-      <th>Email</th>
-      <th>Isadmin</th>
-      <th>Pledgeclass</th>
-      <th>Major</th>
-      <th>Password</th>
-      <th colspan="3"></th>
+      <th colspan="3">UIN</th>
+      <th colspan="3">First Name</th>
+      <th colspan="3">Last Name</th>
+      <th colspan="3">Phone Number</th>
+      <th colspan="3">Email</th>
+      <th colspan="3">Pledge Class</th>
+      <th colspan="3">Major</th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.UIN %></td>
-        <td><%= user.FirstName %></td>
-        <td><%= user.LastName %></td>
-        <td><%= user.PhoneNumber %></td>
-        <td><%= user.Email %></td>
-        <td><%= user.isAdmin %></td>
-        <td><%= user.PledgeClass %></td>
-        <td><%= user.Major %></td>
-        <td><%= user.Password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td colspan="3"><%= user.UIN %></td>
+        <td colspan="3"><%= user.FirstName %></td>
+        <td colspan="3"><%= user.LastName %></td>
+        <td colspan="3"><%= user.PhoneNumber %></td>
+        <td colspan="3"><%= user.Email %></td>
+        <td colspan="3"><%= user.PledgeClass %></td>
+        <td colspan="3"><%= user.Major %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
