--- a/app/views/ks_hubs/index.html.erb
+++ b/app/views/ks_hubs/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Ks Hubs</h1>
 
-<% if @user %>
-  Logged in as: <%= @user.FirstName %>
+<% if Current.user %>
+  Logged in as: <%= Current.user.FirstName %>
 
   <%= button_to "Logout", logout_path, method: :delete %>
 <% end %>
