--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -39,12 +39,12 @@
         <%= form.text_field :Major, class:"form-control", placeholder: "Mechanical engineering" %>
     </div>
     <div class="mb-3">
-        <%= form.label :Password %>
-        <%= form.password_field :Password, class:"form-control", placeholder: "Password" %>
+        <%= form.label :password %>
+        <%= form.password_field :password, class:"form-control", placeholder: "Password" %>
     </div>
     <div class="mb-3">
-        <%= form.label :Password_confirmation %>
-        <%= form.password_field :Password_confirmation, class:"form-control", placeholder: "Confirm password" %>
+        <%= form.label :password_confirmation %>
+        <%= form.password_field :password_confirmation, class:"form-control", placeholder: "Confirm password" %>
     </div>
 
     <div class="mb-3">
