--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -52,8 +52,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :Password %>
-    <%= form.text_field :Password %>
+    <%= form.label :password %>
+    <%= form.text_field :password %>
   </div>
 
   <div class="actions">
