--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,7 +29,7 @@
         <td><%= user.isAdmin %></td>
         <td><%= user.PledgeClass %></td>
         <td><%= user.Major %></td>
-        <td><%= user.Password %></td>
+        <td><%= user.password %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
