--- a/app/views/ks_hubs/index.html.erb
+++ b/app/views/ks_hubs/index.html.erb
@@ -14,7 +14,7 @@
       <th>Title</th>
       <th colspan="3"></th>
     </tr>
-    <%= image_tag 'Kappa-Sigma-Crest.jpeg' %>
+    <!-- <%= image_tag 'Kappa-Sigma-Crest.jpeg' %> -->
   </thead>
 
   <tbody>
