--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Announcements</a>
+          <a class="nav-link active" aria-current="page" href="announcements">Announcements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Events</a>
@@ -24,6 +24,21 @@
           <a class="nav-link" href="sign_in">Sign In</a>
         </li>
       </ul>
+
+      <ul class = "navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if Current.user %>
+        <li class = "nav-item">
+          <span class = "navbar-text">Logged in as: <%= Current.user.FirstName %></span> </li>
+          <li class = "nav-item">
+          <%= button_to "Logout", logout_path, method: :delete, class: "nav-link" %> </li>
+        <% else %>
+        <li class = "nav-item">
+          <%= link_to "Login", sign_in_path, class: "nav-link" %> </li>
+          <li class = "nav-item">
+          <%= link_to "Sign up", sign_up_path, class: "nav-link" %></li>
+        <% end %>
+      </ul>
+
     </div>
   </div>
 </nav>
