--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1> Sign up </h1>
+<h1> Edit profile </h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: Current.user, url: edit_profile_path do |form| %>
 
     <% if form.object.errors.any? %>
         <div class="alert alert-danger>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="mb-3">
-        <%= form.submit "Sign up", class:"btn btn-primary" %>
+        <%= form.submit "Update profile", class:"btn btn-primary" %>
     </div>
 
 <% end %>
