--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,11 @@
       <ul class = "navbar-nav ms-auto mb-2 mb-lg-0">
         <% if Current.user %>
         <li class = "nav-item">
-          <span class = "navbar-text">Logged in as: <%= Current.user.FirstName %></span> </li>
+          <span class = "navbar-text">Logged in as: <%= Current.user.FirstName %></span>
+        </li>
+        <li class = "nav-link">
+          <%= link_to "Edit profile", edit_profile_path, class:"nav-link" %>
+        </li>
           <li class = "nav-item">
           <%= button_to "Logout", logout_path, method: :delete, class: "nav-link" %> </li>
         <% else %>
