--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,8 @@
 
 <% if current_user %>
 
+<%= link_to 'Edit account', edit_user_registration_path %>
+
 <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
 
 <% else %>
