Merch page is accessible from home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,4 +14,4 @@
 
 
 <%= link_to 'Announcements', announcements_path %>
-<%= link_to 'Merchandise', merch_path %>
+<%= link_to 'Merchandise', merch_index_path %>
