--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.navbarStyles{
+    background-color: #344734;
+    height: 100px;
+    padding:25px
+}
+
+.nav-link{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 39px;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.017em;
+
+}
+
+.active{
+    // background: #000;
+    text-decoration: underline;
+
+}
