Added functionality to all CRUD html.erb's and created table for merchandise; bug not allowing creation of new merchandise atm

--- a/app/views/merch/index.html.erb
+++ b/app/views/merch/index.html.erb
@@ -1,1 +1,37 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Merchandise</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th>Product</th>
+            <th>Price</th>
+            <th>Link</th>
+            <th colspan="3"></th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <% @merches.each do |merch| %>
+            <tr>
+                <td><%= merch.name %></td>
+                <td><%= merch.body %></td>
+                <td><%= merch.link %></td>
+                <td><%= link_to 'Show', merch %></td>
+                <% if current_user && current_user.admin %>
+                    <td><%= link_to 'Edit', edit_merch_path(merch) %></td>
+                    <td><%= link_to 'Destroy', merch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <% end %>
+            </tr>
+        <% end %>
+    </tbody>
+    
+</table>
+
+
+<br>
+
+<% if current_user && current_user.admin %>
+<%= link_to 'New Merchandise', new_merch_path %>
+<% end %>
