--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   </head>
 
-  <body>
+  <body style="background-color:#E7D1B5;">
       
 
     <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
@@ -61,5 +61,6 @@
     </nav>
 
     <%= yield %>
+
   </body>
 </html>
