--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,57 +10,9 @@
 
   </head>
 
-  <body style="background-color:#E7D1B5;">
-      
-
-    <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
-      <a class="navbar-brand" href="#">KSHub</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarColor01" >
-        <ul class="navbar-nav mr-auto" style="width:87%; justify-content:center;">
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item <%= active_class(announcements_path) %>">
-            <%= link_to 'Announcements', announcements_path, class: 'nav-link' %>
-          </li>
-          <% if user_signed_in? %>
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-            </li>
-          <% end %>
-        </ul>
-
-
-        <ul class="navbar-nav">
-          <% if current_user %>
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
-            </li>
-          <% end %>
-        </ul>
-
-
-
-
-      </div>
-    </nav>
-
+  <body>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <%= yield %>
-
   </body>
 </html>
