--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,8 @@
 
 <%= link_to 'Announcements', announcements_path %>
 
+<%= link_to 'Events', events_path %>
+
 <% else %>
 
 <h2> Welcome to KS Hub by Kappa Sigma. Please sign up or sign in to continue.</h2>
