added events admin permissions

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,8 +25,11 @@
         <td><%= event.organizer %></td>
         <td><%= event.user_id %></td>
         <td><%= link_to 'Show', event %></td>
+
+        <% if current_user && current_user.admin %>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
