Profile page and roster page formatted, edit profile functionality

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -62,3 +62,23 @@
     width: 50%;
 }
 
+.KSTable {
+    width: 90%;
+    margin: auto;
+}
+
+.KSRow {
+    border: 1px solid #ddd;
+    padding: 8px;
+    background-color: #DCDCDC;
+}
+
+.KSHeader {
+    border: 1px solid #ddd;
+    padding: 8px;
+    background-color: #8B0000;
+    color: white;
+}
+
+
+
