--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -11,7 +11,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @announcement.user.username %>
+  <%= @announcement.user_id %>
 </p>
 
 <%= link_to 'Edit', edit_announcement_path(@announcement) %> |
