Added admin privileges to edit and delete buttons

--- a/app/views/merches/index.html.erb
+++ b/app/views/merches/index.html.erb
@@ -19,8 +19,10 @@
                 <td><%= merch.price %></td>
                 <td><%= link_to merch.link, merch.link %></td>
                 <td><%= link_to 'Show', merch %></td>
-                <td><%= link_to 'Edit', edit_merch_path(merch) %></td>
-                <td><%= link_to 'Destroy', merch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <% if current_user && current_user.admin %>
+                    <td><%= link_to 'Edit', edit_merch_path(merch) %></td>
+                    <td><%= link_to 'Destroy', merch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <% end %>
             </tr>
         <% end %>
     </tbody>
@@ -30,5 +32,6 @@
 
 <br>
 
-
-<%= link_to 'New Merchandise', new_merch_path %>
+<% if current_user && current_user.admin %>
+    <%= link_to 'New Merchandise', new_merch_path %>
+<% end %>
