Added admin priveleges to edit function for announcements and events

--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -14,5 +14,7 @@
   <%= @announcement.user.username %>
 </p>
 
+<% if current_user && current_user.admin %>
 <%= link_to 'Edit', edit_announcement_path(@announcement) %> |
+<% end %>
 <%= link_to 'Back', announcements_path %>
