--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,5 +30,7 @@
   <%= @event.user.username %>
 </p>
 
+<% if current_user && current_user.admin %>
 <%= link_to 'Edit', edit_event_path(@event) %> |
+<% end %>
 <%= link_to 'Back', events_path %>
