--- a/app/views/merches/show.html.erb
+++ b/app/views/merches/show.html.erb
@@ -14,5 +14,7 @@
 <%= @merch.link %>
 </p>
 
+<% if current_user && current_user.admin %>
 <%= link_to 'Edit', edit_merch_path(@merch) %> |
+<% end %>
 <%= link_to 'Back', merches_path %>
