--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,19 @@
           <li class="nav-item <%= active_class(announcements_path) %>">
             <%= link_to 'Announcements', announcements_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item <%= active_class(events_path) %>">
+            <%= link_to 'Events', events_path , class: 'nav-link' %>
+          </li>
+          <li class="nav-item <%= active_class(merches_path) %>">
+           <%= link_to 'Merchandise', merches_path , class: 'nav-link'  %>
+          </li>
           <li class="nav-item <%= active_class(members_path) %>">
             <%= link_to 'Roster', members_path, class: 'nav-link' %>
           </li>
           <li class="nav-item <%= active_class(profile_page_index_path) %>">
             <%= link_to 'My Profile', profile_page_index_path, class: 'nav-link' %>
           </li>
+
           <% if user_signed_in? %>
             <li class="nav-item">
             </li>
