--- a/app/views/merches/new.html.erb
+++ b/app/views/merches/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Merchandise</h1>
+<h1 style="margin-left:40px; margin-top:40px">New Merchandise</h1>
 
 <%= render 'form', merch: @merch %>
 
-<%= link_to 'Back', merches_path %>
