added events on navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
           <li class="nav-item <%= active_class(announcements_path) %>">
             <%= link_to 'Announcements', announcements_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item <%= active_class(events_path) %>">
+            <%= link_to 'Events', events_path, class: 'nav-link' %>
+          </li>
           <li class="nav-item <%= active_class(members_path) %>">
             <%= link_to 'Roster', members_path, class: 'nav-link' %>
           </li>
