--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -11,17 +11,38 @@
     </div>
   <% end %>
 
+
+
+
+  <div class="card" style="border-color:#913031; margin:20vh; margin-top:50px;">
+  <div class="card-body">
+  
+
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.label :title, { class: "form-label"} %>
+    <%= form.text_field :title, { class: "form-control", placeholder: "Title" }   %>
   </div>
 
   <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
+    <%= form.label :body, { class: "form-label"} %>
+    <%= form.text_area :body,  { class: "form-control", placeholder: "Body" }   %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+      <div class="actions" style="margin-top:20px">
+        <div style="display:flex;">
+          <div style="width:33%; margin-left: 0vw"> 
+                                <%= link_to 'Back', announcements_path, class: "btn btn-outline-secondary newMerchandise"  %>
+          </div>
+          <div style="width:33%; justify-content:center; display:flex"> 
+            <%= form.submit "Submit", class: "btn btn-outline-secondary newMerchandise"  %>
+          </div>
+          <div style="width:33%"> </div>
+
+
+        </div>
+
+      </div>
+      
+    </div>
+</div>
 <% end %>
