--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Announcement</h1>
+<h1 style="margin-left:40px; margin-top:40px;">New Announcement</h1>
 
 <%= render 'form', announcement: @announcement %>
 
