--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 <html>
   <head>
+    <%= stylesheet_link_tag "style.css" %>
     <title>KsHubApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -22,6 +24,9 @@
       <div class="collapse navbar-collapse" id="navbarColor01" >
         <ul class="navbar-nav mr-auto" style="width:87%; justify-content:center;">
           <li class="nav-item">
+          <%= link_to announcements_path do %>
+            <%= image_tag "kslogo.png", class: 'nav-img' %>
+          <% end %>
           </li>
           <li class="nav-item">
           </li>
@@ -72,6 +77,38 @@
 
       </div>
     </nav>
+
+    <% if controller_name = 'pages' %>
+
+        <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarColor01" >
+            <ul class="navbar-nav mr-auto" style="width:87%; justify-content:right;">
+              <li class="nav-item">
+                <%= image_tag "kslogo.png", class: 'nav-img' %>
+              </li>
+              <li class="nav-item">
+              </li>
+              <li class="nav-item <%= active_class(new_user_session_path) %>">
+                <%= link_to 'Sign in', new_user_session_path, class: 'landing-nav' %>
+              </li>
+              <li class="nav-item <%= active_class(new_user_registration_path) %>">
+                <%= link_to 'Sign up', new_user_registration_path , class: 'landing-nav' %>
+              </li>
+
+          </div>
+          </nav>
+        <%= image_tag 'images.png', class: "style-image" %>
+        <h2> Welcome to KS Hub by Kappa Sigma</h2>
+        <h4>Please sign up or sign in to continue</h4>
+
+        <%= link_to 'Sign up', new_user_registration_path, class: "button-35" %>
+        <%= link_to 'Sign in', new_user_session_path, class: "button-35" %>
+
+    <% end %>
 
     <%= yield %>
   </body>
