--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
       </div>
     </nav>
 
-    <% if controller_name == 'pages' %>
+    <% if controller_name == 'pages' and !user_signed_in? %>
 
         <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
