--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,68 +1,104 @@
 <h2>Sign up</h2>
 
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
+
+  <div class="card shadow p-3 bg-white rounded " style=" margin:20px 43vh; margin-bottom:10px">
+  <div class="card-body">
   
 
   <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname" %>
+    <%= f.label :email, { class: "form-label"} %><br />
+    <%= f.email_field :email, { class: "form-control", placeholder: "email", autofocus: true, autocomplete: "email" } %>
   </div>
 
-  <div class="field">
-    <%= f.label :lastname %><br />
-    <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname" %>
+  
+  <div style="display:flex">
+  <div class="field width50">
+    <%= f.label :firstname, { class: "form-label"}  %><br />
+    <%= f.text_field :firstname,  { class: "form-control", placeholder: "firstname", autofocus: true, autocomplete: "firstname" }  %>
   </div>
 
-  <div class="field">
-    <%= f.label :uin %><br />
-    <%= f.text_field :uin, autofocus: true, autocomplete: "uin" %>
+  <div class="field width50">
+    <%= f.label :lastname, { class: "form-label"}  %><br />
+    <%= f.text_field :lastname, { class: "form-control", placeholder: "lastname", autofocus: true, autocomplete: "lastname" }%>
   </div>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phonenumber %><br />
-    <%= f.text_field :phonenumber, autofocus: true, autocomplete: "phonenumber" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :major %><br />
-    <%= f.text_field :major, autofocus: true, autocomplete: "major" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :pledgeclass %><br />
-    <%= f.text_field :pledgeclass, autofocus: true, autocomplete: "pledgeclass" %>
   </div>
 
 
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :uin, { class: "form-label"}  %><br />
+    <%= f.text_field :uin,{ class: "form-control", placeholder: "uin", autofocus: true, autocomplete: "uin" } %>
+  </div>
+
+
+
+  <div style="display:flex">
+
+  <div class="field width50">
+    <%= f.label :username, { class: "form-label"}  %><br />
+    <%= f.text_field :username, { class: "form-control", placeholder: "username", autofocus: true, autocomplete: "username" }%>
+  </div>
+
+  <div class="field width50">
+    <%= f.label :phonenumber, { class: "form-label"}  %><br />
+    <%= f.text_field :phonenumber, { class: "form-control", placeholder: "phonenumber", autofocus: true, autocomplete: "phonenumber" }%>
+  </div>
+  </div>
+
+  <div style="display:flex">
+
+  <div class="field width50">
+    <%= f.label :major, { class: "form-label"}  %><br />
+    <%= f.text_field :major,{ class: "form-control", placeholder: "major", autofocus: true, autocomplete: "major" }%>
+  </div>
+
+  <div class="field width50">
+    <%= f.label :pledgeclass, { class: "form-label"}  %><br />
+    <%= f.text_field :pledgeclass, { class: "form-control", placeholder: "pledgeclass", autofocus: true, autocomplete: "pledgeclass" } %>
+  </div>
+    </div>
+
+
+
+
+  <div class="field">
+    <%= f.label :password, { class: "form-label"}  %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password,{ class: "form-control", autocomplete: "new-password"} %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, { class: "form-label"}  %><br />
+    <%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "new-password"}%>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+
+      <div class="actions" style="margin-top:20px">
+        <div style="display:flex;">
+          <div style="width:33%; margin-left: 0vw"> 
+
+          </div>
+          <div style="width:33%; justify-content:center; display:flex"> 
+            <%= f.submit "Sign Up", class: "btn btn-outline-secondary newMerchandise signupPageButton"  %>
+          </div>
+          <div style="width:33%"> 
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+      </div>
+</div>
 <% end %>
 
-<%= render "devise/shared/links" %>
