--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,18 +1,22 @@
-<div style="display:flex">
+<div style="display:flex; justify-content:space-around; align-items:center">
 
-<div class="btn btn-outline-secondary">
 
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name), class: "btn newMerchandise" %><br />
+  <div class="btn btn-outline-secondary">
+    <%= link_to "Log in", new_session_path(resource_name), class: "btn newMerchandise" %><br />
+  </div>
 <% end %>
-</div>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <div class="btn btn-outline-secondary">
+    <%= link_to "Sign up", new_registration_path(resource_name), class: "btn newMerchandise"%><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <div class="btn btn-outline-secondary">
+  <%= link_to "Forgot your password?", new_password_path(resource_name),class: "btn newMerchandise" %><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
