--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,31 @@
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <div class="card shadow p-3 bg-white rounded " style=" margin:10vh 20vh; margin-bottom:10px">
+    <div class="card-body">
+
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, { class: "form-label"} %><br />
+    <%= f.email_field :email, { class: "form-control", placeholder: "email", autofocus: true, autocomplete: "email" } %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+  <div class="actions" style="margin-top:20px">
+      <div style="display:flex;">
+          <div style="width:30%; justify-content:center; display:flex"> 
+                <%= f.submit "Send me reset password instructions",  class: "btn btn-outline-secondary newMerchandise signupPageButton" %>
+          </div>
+          <%# End form %>
+          <% end %> 
+
+          <div style="width:70%"> 
+                <%= render "devise/shared/links" %>
+          </div>
+      </div>
+  </div>
+    </div>
+
+  </div>
+
