check box created

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_field :organizer %>
   </div>
 
+
+  <div class="field">
+    Make it an Announcement: <%= form.check_box :ann %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
