update to form 2

--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -2,7 +2,7 @@
 
 <% if params[:event_id] %>
 <p> event exists </p>
-<%= render 'form', announcement: @announcement %>
+<%= render 'form2', announcement: @announcement %>
 <% else %>
 <%= render 'form', announcement: @announcement %>
 <% end %>
