--- a/app/views/announcements/_form2.html.erb
+++ b/app/views/announcements/_form2.html.erb
@@ -12,7 +12,8 @@
     </div>
   <% end %>
 
-
+  <%= form.hidden_field :title, value: @etitle %>
+  <%= form.hidden_field :body, value: @ebody %>
 
   <h1> Does the Announcement for this Event look OK? </h1>
   <div class="card" style="border-color:#913031; margin:20vh; margin-top:50px;">
@@ -21,13 +22,14 @@
 
   <div class="field">
     <%= form.label :title, { class: "form-label"} %>
-    <%= form.text_field :title, { class: "form-control", placeholder: "Title" }   %>
+    <%= form.text_field :title, :value => @etitle, class: "form-control"   %>
   </div>
 
   <div class="field">
     <%= form.label :body, { class: "form-label"} %>
-    <%= form.text_area :body,  { class: "form-control", placeholder: "Body" }   %>
+    <%= form.text_area :body, :value => @ebody, class: "form-control" %>
   </div>
+
 
       <div class="actions" style="margin-top:20px">
         <div style="display:flex;">
