--- a/app/views/announcements/_form2.html.erb
+++ b/app/views/announcements/_form2.html.erb
@@ -12,8 +12,6 @@
     </div>
   <% end %>
 
-  <p>here</p>
-  <%= @etitle %>
   <h1> Does the Announcement for this Event look OK? </h1>
   <div class="card" style="border-color:#913031; margin:20vh; margin-top:50px;">
   <div class="card-body">
@@ -21,12 +19,12 @@
   
   <div class="field">
     <%= form.label :title, { class: "form-label"} %>
-    <%= form.text_field :title, :value => params[:etitle], class: "form-control"   %>
+    <%= form.text_field :title, :value => "EVENT: #{@etitle}", class: "form-control"   %>
   </div>
 
   <div class="field">
     <%= form.label :body, { class: "form-label"} %>
-    <%= form.text_area :body, :value => @ebody, class: "form-control" %>
+    <%= form.text_area :body, :value => "#{@ebody} \nLocation: #{@elocation} \nDate and time: #{@edate} \nOrganizer: #{@eorganizer}", class: "form-control" %>
   </div>
 
 
