--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -55,6 +55,13 @@
         <td colspan="3"><%= user.pledgeclass %></td>
         <td colspan="3"><%= user.major %></td>
         <% if current_user && current_user.admin %>
+          
+          <tr>
+            <td><%= user.email %>
+            <td><%= user.approved %>
+            <td><%= link_to "Edit", edit_user_path(user) %>
+          </tr>
+          
           <% if current_user != user %>
             <td><%= link_to 'Remove', members_delete_path_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
