Announcement & merchandse show pages,fix_merchLink

--- a/app/views/merches/_form.html.erb
+++ b/app/views/merches/_form.html.erb
@@ -28,7 +28,7 @@
 
       <div class="field mb-3">
         <%= form.label :link, { class: "form-label"} %>
-        <%= form.text_area :link, { class: "form-control", placeholder: "Link" }  %>
+        <%= form.text_area :link, { class: "form-control", placeholder: "Include full link e.g. https://www.facebook.com/" }  %>
       </div>
     
       <div class="actions">
