--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,7 +56,8 @@ h2 {
     margin-top: 30px;
     background-color: #D9D9D9;
     height: 200px;
-    width: 80%
+    width: 80%;
+    border-radius: 50px;
 }
 
 .announcementCardTitle {
@@ -70,6 +71,7 @@ h2 {
     font-weight: 400;
     height: 60px;
     font-size: 25px;
+    padding: 17px;
 }
 
 .announcementCardBody {
@@ -135,6 +137,7 @@ h2 {
     display: flex;
     justify-content: center;
     width: 35vw;
+    margin-top: 15px;
 }
 
 
@@ -161,7 +164,6 @@ h2 {
 .createMerchDelPayButtonContainer {
     display: flex;
     justify-content: flex-end;
-    margin: 17px;
 }
 
 
@@ -201,9 +203,10 @@ h2 {
 
 .merchCard {
     background-color: #D9D9D9;
-    height: 200px;
+    height: 225px;
     width: 41%;
     margin: 15px 30px 15px 30px;
+    border-radius: 50px;
 
 }
 
