--- a/app/views/merches/index.html.erb
+++ b/app/views/merches/index.html.erb
@@ -18,7 +18,7 @@
             <div class="merchCard">
 
 
-            <div class="merchCardTitle">
+            <div class="merchCardTitle" style="padding:17px" >
                 <div style="width:33%">
 
                 
@@ -67,7 +67,8 @@
 
                     <div class="createMerchPayButtonContainer">
                         <div class="btn btn-outline-primary">
-                            <%= link_to 'BUY NOW', merch.link , :class => "btn newPayMerchandise"  %>
+                            <%# <%= link_to 'BUY NOW', merch.link , :class => "btn newPayMerchandise"  %> 
+                            <%= link_to 'BUY NOW', merch.link, target: '_blank' , :class => "btn newPayMerchandise"  %>
                         </div>
                     </div>
 
@@ -77,7 +78,7 @@
     <% end %>
 </div>
 
- <div style="height:30vh"></div>
+ <div style="height:50vh"></div>
 
 <table>
     <thead>
