--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,7 +58,7 @@ h4 {
 .nav-img{
   position: relative;
   right: 350%;
-  top: -4px;
+  top: -3px;
   width: 40%;
   height: auto;
 }
@@ -77,4 +77,20 @@ h4 {
   top: 25px;
   letter-spacing: -0.017em;
   margin-right: 45px;
+}
+
+.signuplogin-nav-img{
+  position: relative;
+  right: 1035px;
+  top: -3px;
+  width: 40%;
+  height: auto; 
+}
+
+.signup{
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto; 
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
