added custom flash messages, need to edit them

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,6 @@
 
 <% if current_user %>
 
-<%= link_to 'Edit account', edit_user_registration_path %>
-
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-
-<%= link_to 'Announcements', announcements_path %>
-
-<%= link_to 'Events', events_path %>
-
-<%= link_to 'Merchandise', merches_path %>
+<%= render announcements_path %>
 
 <% end %>
