--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
 
   <body style="background-color:#E7D1B5;">
+
+  <% flash.each do |key, value| %>
+    <div class="<%= flash_class(key) %>">
+          <%= value %>
+    </div>
+  <% end %>
       
   <% if user_signed_in? %>
     <nav class="navbar navbar-expand-md navbar-dark navbarStyles">
