--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -115,7 +115,8 @@ h2 {
     color: #344734;
     background-color: transparent;
     background-image: none;
-    border-color: #344734
+    border-color: #344734;
+     
 }
 
 .btn-outline-secondary:hover {
