--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -262,3 +262,9 @@ h4 {
   margin-bottom: 30px;
   font-size: 260%;
 }
+
+.profile_h{
+  position: relative;
+  margin-left: 44%; 
+  margin-bottom: 30px;
+}
