--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -44,6 +44,8 @@
       <th colspan="3">Pledge Class</th>
       <th colspan="3">Major</th>
       <% if current_user && current_user.admin%>
+        <th colspan="3">Approved Status</th>
+        <th colspan="3"></th>
         <th colspan="3"></th>
       <% end %>
     </tr>
@@ -63,20 +65,17 @@
         <td colspan="3"><%= user.pledgeclass %></td>
         <td colspan="3"><%= user.major %></td>
         <% if current_user && current_user.admin %>
-          
-          <tr>
-            <td><%= user.email %>
-            <td><%= user.approved %>
-            <td><%= link_to "Edit", edit_user_path(user) %>
-          </tr>
-          
-          <% if current_user != user %>
-          <td><div class="btn btn-outline-secondary" style="align-content=center">
-            <%= link_to 'Remove', members_remove_path(user), :class => "btn newMerchandise"  %>
+            <td colspan="3"><%= user.approved %>
+            <td colspan="3"><div class="btn btn-outline-secondary" style="align-content=center">
+            <%= link_to 'Edit', edit_user_path(user), :class => "btn newMerchandise"  %>
           </div></td>
+          <% if current_user != user %>
+            <td colspan="3"><div class="btn btn-outline-secondary" style="align-content=center">
+              <%= link_to 'Remove', members_remove_path(user), :class => "btn newMerchandise"  %>
+            </div></td>
           <% end %>
           <% if current_user == user %>
-            <td></td>
+            <td colspan="3"></td>
           <% end %>
         <% end %>
       <% end %>
