added border to roster table, fixed edit profile buttons, other ui fixes

--- a/app/views/profile_page/index.html.erb
+++ b/app/views/profile_page/index.html.erb
@@ -9,7 +9,8 @@
     }
 
     th {
-      border: 1px solid #ddd;
+      border: 1px solid #FFFFFF;
+      border-radius: 5px;
       padding: 8px;
       background-color: #8B0000;
       color: white;
@@ -18,7 +19,8 @@
     }
 
     td {
-      border: 1px solid #ddd;
+      border: 1px solid #FFFFFF;
+      border-radius: 5px;
       padding: 8px;
       background-color: #DCDCDC;
       width: 70%;
