--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -6,10 +6,12 @@
     table {
       width: 90%;
       margin: auto;
+      margin-top: 45px;
     }
 
     th {
-      border: 1px solid #ddd;
+      border-radius: 5px;
+      border: 1px solid #FFFFFF;
       padding: 8px;
       background-color: #8B0000;
       color: white;
@@ -17,7 +19,8 @@
     }
 
     td {
-      border: 1px solid #ddd;
+      border-radius: 5px;
+      border: 1px solid #FFFFFF;
       padding: 8px;
       background-color: #DCDCDC;
       text-align: center;
@@ -35,14 +38,17 @@
   <thead>
     <tr>
       <% if current_user && current_user.admin%>
+        <th colspan="3"></th>
         <th colspan="3">UIN</th>
       <% end %>
+
       <th colspan="3">First Name</th>
       <th colspan="3">Last Name</th>
       <th colspan="3">Phone Number</th>
       <th colspan="3">Email</th>
       <th colspan="3">Pledge Class</th>
       <th colspan="3">Major</th>
+
       <% if current_user && current_user.admin%>
         <th colspan="3">Approved Status</th>
         <th colspan="3"></th>
@@ -56,30 +62,41 @@
       <tr>
       <% if user.active %>
         <% if current_user && current_user.admin%>
+          <% if user.admin %>
+            <td colspan="3">Admin</td>
+          <% else %>
+          <td colspan="3"></td>
+          <% end %>
           <td colspan="3"><%= user.uin %></td>
         <% end %>
+
         <td colspan="3"><%= user.firstname %></td>
         <td colspan="3"><%= user.lastname %></td>
         <td colspan="3"><%= user.phonenumber %></td>
         <td colspan="3"><%= user.email %></td>
         <td colspan="3"><%= user.pledgeclass %></td>
         <td colspan="3"><%= user.major %></td>
-        <% if current_user && current_user.admin %>
 
-            <td colspan="3"><%= user.approved %></td>
+        <% if current_user && current_user.admin %>
+            <% if user.approved %>
+              <td colspan="3">Yes</td>
+            <% else %>
+              <td colspan="3">No</td>
+            <% end %>
+            
             <td colspan="3"><div class="btn btn-outline-secondary" style="align-content=center">
-            <%= link_to 'Edit', edit_user_path(user), :class => "btn newMerchandise"  %>
-          </div></td>
+              <%= link_to 'Edit', edit_user_path(user), :class => "btn newMerchandise"  %>
+            </div></td>
 
           <% if current_user != user %>
             <td colspan="3"><div class="btn btn-outline-secondary" style="align-content=center">
-              <%= link_to 'Remove', members_remove_path(user), :class => "btn newMerchandise"  %>
+              <%= link_to 'Remove', members_remove_path(user), :onclick => "return confirm('Are you sure?')", :class => "btn newMerchandise"  %>
             </div></td>
-          <% end %>
-          <% if current_user == user %>
+          <% else %>
             <td colspan="3"></td>
           <% end %>
         <% end %>
+
       <% end %>
       </tr>
     <% end %>
