centered headers on every page

--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1 style="margin-left:40px; margin-top:40px;">Announcements</h1>
+<head>
+<%= stylesheet_link_tag "style.css" %></head>
+<h1  class = "profile_h" style="margin-top:40px">Announcements</h1>
 
 <% if current_user && current_user.admin %>
 
