--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -32,7 +32,7 @@
   </style>
 </head>
 
-<h1 style="margin-left:40px; margin-top:40px">Members</h1>
+<h1  class = "profile_h" style="margin-top:40px">Members</h1>
 
 <table>
   <thead>
