--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -71,7 +71,7 @@
             <%= f.submit "Update Profile", class: "btn btn-outline-secondary newMerchandise signupPageButton" %>
           </div>
 
-          <div style="width:33%; justify-content:center; display:flex; margin:10px;">
+          <div style="width:33%; justify-content:center; display:flex; margin:10px; text-decoration:none;">
               <%= link_to 'Delete', @user, :onclick => "return confirm('Are you sure?')", :method => :delete, :remote => true, :class => "btn btn-outline-secondary newMerchandise signupPageButton" %>
           </div>
         </div>
