--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -262,9 +262,8 @@ h4 {
 }
 
 .profile_h{
-  position: relative;
-  margin-left: 44%; 
-  margin-bottom: 30px;
+  text-align:center;
+  margin-bottom: 40px;
 }
 
 .etoa_title{
