--- a/app/views/merches/index.html.erb
+++ b/app/views/merches/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 style="margin-left:40px; margin-top:40px">Merchandise</h1>
+<h1  class = "profile_h" style="margin-top:40px">Merchandise</h1>
 
 
 <% if current_user && current_user.admin %>
