ui changes and events show pages

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -53,42 +53,30 @@
              </div>
 
 
-             <div style="padding: 12px 25px 25px 25px">
-                   <div class="merchCardBody1" style="display:flex;">
-                       <div style="width:50%; padding:10px">
-                           <Strong>Price: </Strong>
-                               <%= event.body %>
-                       </div>
+            <div style="padding: 12px 25px 25px 25px">
+                <div class="merchCardBody1" style="display:flex;">
+                    <div style="width:50%; padding:10px">
+                        <Strong>Body: </Strong>
+                            <%= event.body %>
+                    </div>
 
-                       <div style="width:50%; padding:10px">
-                           <Strong>Location: </Strong>
-                               <%= event.location %>
-                       </div>
-                   </div>
-                   <div class="merchCardBody1" style="display:flex;">
-                       <div style="width:50%; padding:10px">
-                           <Strong>Organizer: </Strong>
-                               <%= event.organizer %>
-                       </div>
-
-                       <div style="width:50%; padding:10px">
-                           <Strong>User ID: </Strong>
-                               <%= event.user_id %>
-                       </div>
-                   </div>
-                     <div class="merchCardBody1" style="display:flex;">
-                       <div style="width:50%; padding:10px">
-                           <Strong>Date: </Strong>
-                               <%= event.date %>
-                       </div>
-
-                       <div style="width:50%; padding:10px">
-
-                       </div>
-                   </div>
-             </div>
-
-         </div>
+                    <div style="width:50%; padding:10px">
+                        <Strong>Location: </Strong>
+                            <%= event.location %>
+                    </div>
+                </div>
+                <div class="merchCardBody1" style="display:flex;">
+                    <div style="width:50%; padding:10px">
+                        <Strong>Organizer: </Strong>
+                            <%= event.organizer %>
+                    </div>
+                    <div style="width:50%; padding:10px">
+                        <Strong>Date: </Strong>
+                            <%= event.date %>
+                    </div>
+                </div>
+            </div>
+        </div>
      <% end %>
  </div>
 
